<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="T_SHUTTER_CFG" Id="{f9924ab9-cd48-4def-aee7-2b2b462ed7be}">
    <Declaration><![CDATA[TYPE T_SHUTTER_CFG :
STRUCT
	sName:				STRING	:= 'Shutter';	// Instance name

	bActiveLowClosed:	BOOL 	:= FALSE;		// If TRUE, the CLOSED signal is Active Low, default FALSE
	bActiveLowFault:	BOOL 	:= FALSE;		// If TRUE, the FAULT signal is Active Low, default FALSE
	bActiveLowOpen:		BOOL 	:= FALSE;		// If TRUE, the OPEN signal is Active Low, default FALSE
	bActiveLowSwitch:	BOOL 	:= FALSE;		// If TRUE, the SWITCH signal is Active Low, default FALSE

	bIgnoreClosed:		BOOL 	:= FALSE;		// If TRUE, the CLOSED signal is Ignored, default FALSE
	bIgnoreFault:		BOOL 	:= FALSE;		// If TRUE, the FAULT signal is Ignored, default FALSE
	bIgnoreOpen:		BOOL 	:= FALSE;		// If TRUE, the OPEN signal is Ignored, default FALSE

	bInitialState:		BOOL 	:= FALSE;		// Default shutter position is FALSE/CLOSED
	nTimeout:     		UDINT 	:= 3000;		// Timeout for OPEN/CLOSE transitions [msec], default 3000 ms
	
	// Logging
	bLogExtTime:		BOOL 	:= FALSE;		// If TRUE, use external time in event logs. Default FALSE.
	bDebug:				BOOL 	:= FALSE;		// If TRUE, show event logs of Debug type. Default FALSE.
	bLog:				BOOL 	:= TRUE;		// If TRUE, log events. Default TRUE.
	
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>