<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="T_SHUTTER_STAT" Id="{b8d52083-9990-40a7-82e3-575bf4048bc9}">
    <Declaration><![CDATA[TYPE T_SHUTTER_STAT :
STRUCT
	//
	// Common variables START
	//
	bLocal:			BOOL	:= FALSE;						(* Device operated from PLC GUI *)

	nState:			E_SHUTTER_STATE		:= E_SHUTTER_STATE.NOTOP;			(* State, see E_SHUTTER_STATE *)
	nSubstate:		E_SHUTTER_SUBSTATE	:= E_SHUTTER_SUBSTATE.NOTOP_NOTREADY;(* Substate, see E_SHUTTER_SUBSTATE *)

	nErrorCode: 	E_SHUTTER_ERROR 	:= E_SHUTTER_ERROR.OK;				(* Error code *)
	nLastCommand:	E_SHUTTER_COMMAND	:= E_SHUTTER_COMMAND.NONE;			(* Last command sent to the device *)
	nStatus: 		E_SHUTTER_STATUS	:= E_SHUTTER_STATUS.OK; 			(* Device status *)
	nHwStatus: 		E_SHUTTER_HW_STATUS	:= E_SHUTTER_HW_STATUS.UNKNOWN; 	(* Unknown, error, open, closed. See E_SHUTTER_HW_STATUS *)
	nRpcErrorCode: 	E_SHUTTER_RPC_ERROR := E_SHUTTER_RPC_ERROR.OK;			(* RPC Error code *)

	sState:			STRING	:= 'NOT OP';					(* State textual description *)
	sSubstate:		STRING	:= 'NOT READY';					(* Substate textual description *)
	sErrorText: 	STRING 	:= 'OK'; 						(* Error text *)
	sRPCErrorText: 	STRING 	:= 'OK'; 						(* RPC Error text *)
	sStatus: 		STRING 	:= 'OK'; 						(* Status in textual form, e.g. 'OFF' *)
	sHwStatus: 		STRING 	:= 'UNKNOWN'; 					(* HW Status in textual form: 'UNKNOWN', 'ERROR', 'OPEN' or 'CLOSED' *)
	sLastCommand:	STRING	:= 'NONE';						(* Last command, as string, sent to the device *)
	sLibVersion:	STRING	:= 'UNKNOWN';					(* Library version as string, e.g. '1.2.0.0' *)
	
	sActionDesc:	STRING	:= '';
	sEventDesc:		STRING	:= '';

	nCycleCounter:	UDINT	:= 0;							// Alive flag
	nCycleTime:		UDINT	:= 0;							// Cycle time in us (microsec)
	//
	// Common variables END
	//

	//
	// Device specific variables
	//
	nLastTimeToOpen:	DINT	:= -1;	// Time taken for last OPEN command [msec] (-1 = failure)
	nLastTimeToClose:	DINT	:= -1;	// Time taken for last CLOSE command [msec] (-1 = failure)
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>